MDEV-12866 Out-of-range error with CREATE..SELECT..TO_SECONDS(NOW())